# quartodoc-repr

./: .gitignore  Makefile  README.md  _quarto.yml  _sidebar.yml  index.qmd  objects.json  requirements.txt  setup.cfg
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/reference/: index.html  module.html  othermodule.html
docs/site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
reference/: index.qmd  module.qmd  othermodule.qmd
src/example/: module.py  othermodule.py
