[metadata]
name = example
version = 1.0.0
license = MIT
description = Repr for quartodoc
long_description = file: README.md
author = jannik buhr
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License (GPL)
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    pyyaml

python_requires = >= 3.9

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    example = example.module:main
